# openwebrtc-gst-plugins

./: .build.yaml  Makefile.am  README.md  configure.ac  gstreamer-sctp-1.5-uninstalled.pc.in  gstreamer-sctp-1.5.pc.in
debian/: README.kurento  changelog  control  copyright  openwebrtc-gst-plugins-dev.install  openwebrtc-gst-plugins.install  rules
ext/sctp/: Makefile.am
gst-libs/gst/sctp/: Makefile.am
gst/scream/: Makefile.am
gst/videorepair/: Makefile.am
